Fixed alignment and font sizes in Torvalds quote

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -26,14 +26,14 @@ body {
     margin: 0;
     padding: 0;
     font-size: 4.5em;
-    font-weight: 700;
+    font-weight: 500;
 }
 
 .text-vertical-center h2 {
-    margin-right: 4.0em;
+    margin-right: 6.0vw;
     padding: 0;
     font-size: 3.0em;
-    font-weight: 300;
+    font-weight: 200;
 	text-align: right;
 }
 
